--- a/package.json
+++ b/package.json
@@ -9,18 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-email/components": "0.0.27",
+    "@react-email/markdown": "0.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "docx": "^9.0.2",
+    "dompurify": "^3.1.7",
+    "file-parser": "^0.10.0-rc3",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.8.0",
+    "markdown-to-jsx": "^7.5.0",
     "next": "15.0.1",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
+    "pdf-text-reader": "^5.1.0",
+    "pdfjs-dist": "^4.8.69",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-markdown": "^9.0.1",
+    "rehype-raw": "^7.0.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
